@@ -6,27 +6,32 @@ DIST deblob-check-4.1 674781 SHA256 54aa33e23a31ead6f982b830be86003c306b88f0d0a9
 DIST genpatches-4.1-7.base.tar.xz 59032 SHA256 9106e15001e0c286ef929d5e4505507ccdefb0aecdd094b73d57d587070d3288 SHA512 da1e3ef03874ab0fd3af811d6b72e791117dd7490ecbd8698e24e98424175c0ad7228182976fdadbc62a3ef69bf721f82d99cc1760417c4ba3401844fe3c8db4 WHIRLPOOL d3d3623112f118f98db870f48bc3181d6f510fdb4d916a88a832065a2e0df99c1bc5e04db6f7dd09c505f0253b76037965bbaa27103263dd95a713d0428db5ba
 DIST genpatches-4.1-7.experimental.tar.xz 214944 SHA256 1812d9b5cfa6a974cf36bb44a14bec26d021b29d386ce3139b50b99e3175143f SHA512 9704ae5529610afa2d6e62a123cba0a1891a18229a97ad5214449f23cf870e70932acd3a2ce32c5a30bd2cf89a64a012b23ee2591b699120cbffba3cb1cb0509 WHIRLPOOL cad56926d233a7b75dc4e915c1256a10864d356b6124b272f9af7eb59ae77871fd0c58ee810fdaf8d86820fdef1c0670ff7a463142cd7daa9fe9586983fc3fb9
 DIST genpatches-4.1-7.extras.tar.xz 16180 SHA256 39569583e833ff338b8126a52ae46a9a9b335d701006abbca7ed239bb84e7129 SHA512 4a5be5d19474a4679f83135ddfbb9af4b2c2c2d614ae95911c641c4d6fea8de9e25ebc1f4eefc2d9b1976c46b880e8717a0ca6987c64d2ccff969af5d6a84387 WHIRLPOOL 4509fef31139f79d7609e31d37b29f636471ba471c6ab47d6d4fcdd661b9a20d13e292b57a668b40a885a3aad4e2f831a1c3861aafbc3c85dd47f235b0ed09a6
+DIST genpatches-4.9-15.base.tar.xz 306680 SHA256 0d21f36e5dada40a98ff345ebc01678d2aee060becc7c5c1df84edec9279af2a SHA512 2962f30bd055a5afcefe8aca654419da52c61fc8e5ee8a16770020f517467ad13e4d7ba47c0b1b531b0e4be630b4ca2cf78170544d5ac0115db7071cc504278b WHIRLPOOL 77f667264615abd7a7324abf60bcc2177421595130103d1af79a438da907fb2d274048f51e2f5ae66d80b27a8b1ba732c0653fa48d58bfff338c815cef3b68eb
+DIST genpatches-4.9-15.experimental.tar.xz 105620 SHA256 95e2425fe639048d06d9695c34cc4e74222e29b08fe1e5e4673e746d6f5ad8d4 SHA512 f708e6247ea3cfdcdcf2e4c80ddf65722ca078a10a545d21172d46ce0e9021e3f6cd382c85aa8bd219d1da1c69de6be21c41d8c2250ad0fda1e21e8ae2964577 WHIRLPOOL 8272693cd4e3a95bc731f035c0d2002761d8446f3fe21ae217c9ba83d127f4da4d0b072ca89fe8e7068540b4e55671f5acf288779dbff79542a590505802a64c
+DIST genpatches-4.9-15.extras.tar.xz 17328 SHA256 7d65754bb7e17d006462d0575a954c48d5ce98ad5ca370cb7f227ba7e711cda0 SHA512 4b4e61cb350716fe0e111ee81309de985e7a4442e7fce0268b50a8a02bddc63a904fd148dee8f1258c1df393324236cc75f823c4708f10a74863cdaf5c28d56e WHIRLPOOL 849be987dc4a07fc7161ae52e2c996ad6dc4c8395e1559f41df508b6b95b60df00a50a3a252adc17d003a0630a580869d36661bef1dfd3186e7977f5900aa445
 DIST gentoo-b2-kernel-patches-4.1.3-r1.tar.gz 17364 SHA256 03554f9440ede9a1601c6adfbc4ec6a5d18f016cddac96e2bb120c7f847ed7ff SHA512 b6e5315b2327410fae8a37f300c17a6604a8026cba774667d8f49d36ffb185896dd6235bf2b695d8954b1e8fc3a7fecdd1d69b9df1d6651051c249af2a7dab44 WHIRLPOOL be9ba2a87be4be5b10ede7d5363e18ddedec197773a7c41b7c2ed1cb4fab007c9b2145a9acea2d3bd7d1208181c6b6e4fb506801e1ab4896c929e30dce2bae56
 DIST gentoo-b2-kernel-patches-4.1.3.tar.gz 17379 SHA256 4511097c26d7f16192d8dda8592567137801535f4a7fcd743ebf9969dc2d45ed SHA512 ed0ea76e4dcbdbff664e85fc723c6fdfcaefa6eba565e5477d08aef060f2d14d4f2410108c2048e009836020dafcfbc03e5f870dc8150b6156d32d11d0565366 WHIRLPOOL bbc27775b19883428a6fee117f2bb17931eafa8a11dcfe68bc35c04f81c328f7d3627657628afde1b5a5fc57406cc057e17d6fe626ba66ef4ca595d684e9d97e
+DIST gentoo-b2-kernel-patches-4.9.13.tar.gz 17392 SHA256 429adf96288672ccf7651da1274ee0841b04bcdcc5cbec91521fa4b44b5a3ac2 SHA512 9ebff4d22a786aa6c4d7bf1baf40280ef2dbbf64fd2a92813a4a55eb14c8e97a34ca2ea445113c790677ade1eb56a05e849429a31d4abb8fc4e192674cb5e52e WHIRLPOOL 0d08f25825485f2f9f8a802ecb7ce7f4948809c2186d0df616ba733aca5fd744c62ec25e2241ce204958c6ac68aca5cf90020f8544e29622c96e63157226041c
 DIST linux-4.1.tar.xz 83017828 SHA256 caf51f085aac1e1cea4d00dbbf3093ead07b551fc07b31b2a989c05f8ea72d9f SHA512 168ef84a4e67619f9f53f3574e438542a5747f9b43443363cb83597fcdac9f40d201625c66e375a23226745eaada9176eb006ca023613cec089349e91751f3c0 WHIRLPOOL 85fcfdb67ea7f865272a85d3b4c3ec1f5a1267f4664bf073c562bb3875e9d96ad68486259d8866a9aced98c95de16840ec531d89745aec75b7315a64ebe650b8
+DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD gentoo-b2-sources-4.1.3-r1.ebuild 1283 SHA256 7bf0bd8db81cbaf0b70b3f0c0f9b5b2b90997d6cbb7777074f1ffb1bb1901bd2 SHA512 d5e4c0892dff80566e8997c32dfe3039c700ff5f0effea4885e6645c006479b20b3b4ac5182ca213a0fdf73715753ea6b8a95b43e5749af09ce80c36715c643c WHIRLPOOL cdf41ac69e51a8ab88403f0abe47ea4d7bfc460e8bbeaf792c245ea4746956eff8e815a2a2357fa1d001801d54ccf40f1b62a304fc836e3408545d741ac6a525
 EBUILD gentoo-b2-sources-4.1.3.ebuild 1281 SHA256 2b94edcf1c0bbbbe58d5dd6fb02dcfe9cdbf5cf9167fbb5d5e7405b81d95f522 SHA512 360795a0733ec557fc11f754cb2873577644a5a0637db0b990e883f37669ba3b0e767a27bdadd4eb15cea7555541f6a120c361f06bd5dffe40e1371bd60f1ccb WHIRLPOOL 26992bc7ead1d216326dbfcd7608bfa36f2b3f9832b72c047df2f21e5b58b7d5260944e4bb0ffeefd568e706a9f38cb78f961cfbc6a66588741f86dde06985a8
-MISC ChangeLog 1057 SHA256 5eccaa55a0a406b7aafe2be3a6f249480f44b58283e622a5327a111f0527d812 SHA512 4a425fbd1fbb291aaa54c1b1e43e87fea75c8a1a5245eff0ff8b571ac591c9b9f2400166546e7a8981a04bd5111490fd0e595e6b67e6f13dc9b86125ec42d5e5 WHIRLPOOL 8596dc98c6d7d1678473a8aa788728c8224208c5b7f249138cb45dd413ef0acf7ecd302e61e343b10e21058ba9aafdef112120414f23929bcfe01293b0792f7b
+EBUILD gentoo-b2-sources-4.9.13.ebuild 1270 SHA256 09a8d3eeb63119ebb0647b1b835bb37eb926b2490a1dfd8356d7b8a28c31c857 SHA512 3d4418f2e733019da0f7af75de6590f1e242f23509f3e24ad69fac6fd8be43a1d59d4292a609c4f7ac6ce0e555eb588b25a5e5f5173be14fb9e6f5ba2b28b2c0 WHIRLPOOL 171731833506e7916dcad8558d604de6edf53efe5749b1ac4839bbffaf102e3bb4ced76116f15f90f558412dd89439af67dae568771c6a9358d98c81f2eaf55c
+MISC ChangeLog 1208 SHA256 c6e0df0afd44e323459f11fccb2a33a5bfd36deece76b1137413fcc4f2583383 SHA512 719ebdac13d0ec88c9226baefd7dcf355131cf1dbc96353960cc2c2f86865e8804dd38c2ff5523a2433dd6dd756adc6bf8ad5f8a397adcec23a1506c69bf0bd4 WHIRLPOOL d175da60a69710f6a6e2278caeae1d94b5626ef870b15fb6113203bc9e596c34467f00c98582d5d73ff531325441e07c6b05d07477b92832a5221b0d985622f9
 MISC metadata.xml 791 SHA256 1f659a2b4a3e3d3b16715c76abc7c4a7f056c406e2787e2f9053fae150239859 SHA512 f5e77f85ee6ce465f001cf4756c9d7976122b4895c66c92103eb855d8bf2e918e66102c64317e68599f7c77b737bcf1f4f695d44deaa389ef0926408733725b7 WHIRLPOOL ddf30598116f6e116fc017ce323e25b58c5cfca96d5d58aebd482b6cda86a8993730123947f13b2ef289c538435f3daeb24df6404d302cdb5b0459291dab69a3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iQIcBAEBCAAGBQJW2siUAAoJEDHIDbLd52zqoBgP/Rbp1ZxaMVvFhY2ybgZE4zvv
-ZVJOwQXmTuNQJC2GDTIdYae0Hnfmq2aUGgnbTbk47I8yYUDhkYWC69IfJTjCJRzE
-5LdQPPSn0+ffbh6B0/bI2jT+leIFhXQeCvNX6xYbDqlHsIdwewqvtyW3iM2F3Sak
-vZVAlp13zrGe+K8aXIsyJomHTBlZ6N9lMcb6zc1wygBdVqnai7ozwo3tMHh1AIRM
-lL80g+IM57IGmO8lFYUQ8xpmIhMA6mvYrwgbwjkF836GrhHTaM/QUw5AeRhDau9M
-Zo6z7rF1DfsHBCcfzaM0KUYywnAJu3i9KBKnp539D8HC/ShJQsJtyRpbDBmWc2XC
-YzV8YGvfUgvGy06T4XyJ2j3EY6nqvyKD7s/bxZ5/ybr3W74F9a8cDf02vTH42Qey
-AZORWuVIguAmLFgxVbtjgpPb0Aqgdqmxjbo+ZvQH6HK+lVKKruz8p423twqO7i9G
-VnnLAs8ffKkGkLq9wfo67Ke4e0uI331jHvMdZ3Rx3WThlt8ZHrcTnMBxk7vldKu6
-HnU5EsGcd9jy8uwXbjbtRGf1ZwtQTRvZPG2ZBqrwlLG7vav13gBggQWcffs5ibbU
-cdLQHiqykqNIjZuK4ee3NZzOfjU7gOLbGMp/CdLFpplSiLjnREiFhg2i7PBDyJFe
-EiNmFya8w7c/66RTbV+p
-=Z/5p
+iQIzBAEBCAAdFiEEQSCyFISndkdGWDkJMcgNst3nbOoFAljQIscACgkQMcgNst3n
+bOoWog//X+BZ/RsMhs2SctvJrvVFhM4nKNa+B3zrW7htWciMRWgFuow4rU2kT21q
+9wD1YRMIJWmu3/yi2H7wgHV2SAedamhdR2fWkwub4UebmPDy1nJNHRfszRydSYs+
+7jPaP0Qgnn8WDIZ/oMO/lJnEgy0BF33Uw/ZQBvHYGrDQJ8541s0NfIBuB6ZOdmnf
+Q7RMKc760k5XVSOynTFqo01ZZ4crm9knIct3ImtbD3F80vHirhhPM6dAfpGvUb2k
+LQ5ZqQ3sD32QxYZxNida4+aJJmUQJpTgYyxgRaQXP/kc3lRTj1DpsW3qNvdj9djn
+BzEGeIQPQYwLWv/RCcAWW0GmOZUyVtCgzogSE6UddLt1gRkSzmE4N23rIg0jd9LT
+3pJQW2iMrMWThP5YeF7M7jnKFWHO5r6GdYLEgA4/3Ertk+fp4DFp5+Nj/qPhZztV
+Ef6COgVnAvqzbMsPxsbQQ4HkuFVnMBwaeXaEZypSidiVObTEX0ood422+1dLcnaS
+H3Ojs08wNp72X7CDydksbt98/gsTxo4Gzgnzba4aMYsH+aL0Rt7ciICJm4Na0Mls
+4EwJp+XKiHHjX+ByXIwPVbiHq5U2WgZIS6fJzKmRoDM5/hJneSandrVl4gopRrVy
+1J9vXquZGMLXst3jfq7GrFmSw2tTCNroYQ2xALuh6ffol0gpkNk=
+=2qUU
 -----END PGP SIGNATURE-----
