@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/gentoo-b2-sources
-# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2017 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*gentoo-b2-sources-4.9.13 (20 Mar 2017)
+
+  20 Mar 2017; sakaki <sakaki@gentoo.org> +gentoo-b2-sources-4.9.13.ebuild:
+  Update for 4.9.13 kernel (LTS)
 
 *gentoo-b2-sources-4.1.3-r1 (05 Mar 2016)
 
